commit imagenes folder

--- a/Tarea1-3/prueba1_3-areas.html
+++ b/Tarea1-3/prueba1_3-areas.html
@@ -119,35 +119,35 @@
         </div>
         <div class="main">
             <div class="card">
-                <img src="./360.png" alt="img">
+                <img src="./imagenes/360.png" alt="img">
                 <p>Tarjeta 1</p>
             </div>
             <div class="card">
-                <img src="gob5qsklsned1.jpg" alt="img">
+                <img src="./imagenes/gob5qsklsned1.jpg" alt="img">
                 <p>Tarjeta 2</p>
             </div>
             <div class="card">
-                <img src="morgana-persona-5.jpg" alt="img">
+                <img src="./imagenes/morgana-persona-5.jpg" alt="img">
                 <p>Tarjeta 3</p>
             </div>
             <div class="card">
-                <img src="./360.png" alt="img">
+                <img src="./imagenes/360.png" alt="img">
                 <p>Tarjeta 4</p>
             </div>
             <div class="card">
-                <img src="./360.png" alt="img">
+                <img src="./imagenes/360.png" alt="img">
                 <p>Tarjeta 5</p>
             </div>
             <div class="card">
-                <img src="./360.png" alt="img">
+                <img src="./imagenes/360.png" alt="img">
                 <p>Tarjeta 6</p>
             </div>
             <div class="card">
-                <img src="./360.png" alt="img">
+                <img src="./imagenes/360.png" alt="img">
                 <p>Tarjeta 7</p>
             </div>
             <div class="card">
-                <img src="./360.png" alt="img">
+                <img src="./imagenes/360.png" alt="img">
                 <p>Tarjeta 8</p>
             </div>
         </div>
