--- a/Tarea1-3/prueba1_3-cardsflex.html
+++ b/Tarea1-3/prueba1_3-cardsflex.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tarea 1.3 - Dashboard</title>
+    <title>Tarea 1.3 - Dashboard (Grid/Flex)</title>
     <style>
         body {
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -124,27 +124,27 @@
         </div>
         <div class="main">
             <div class="card">
-                <img src="./360.png" alt="img">
+                <img src="./imagenes/360.png" alt="img">
                 <p>Tarjeta 1</p>
             </div>
             <div class="card">
-                <img src="gob5qsklsned1.jpg" alt="img">
+                <img src="./imagenes/gob5qsklsned1.jpg" alt="img">
                 <p>Tarjeta 2</p>
             </div>
             <div class="card">
-                <img src="morgana-persona-5.jpg" alt="img">
+                <img src="./imagenes/morgana-persona-5.jpg" alt="img">
                 <p>Tarjeta 3</p>
             </div>
             <div class="card">
-                <img src="./360.png" alt="img">
+                <img src="./imagenes/360.png" alt="img">
                 <p>Tarjeta 4</p>
             </div>
             <div class="card">
-                <img src="./360.png" alt="img">
+                <img src="./imagenes/360.png" alt="img">
                 <p>Tarjeta 5</p>
             </div>
             <div class="card">
-                <img src="./360.png" alt="img">
+                <img src="./imagenes/360.png" alt="img">
                 <p>Tarjeta 6</p>
             </div>
         </div>
