--- a/Tarea1-3/tarea1_3-main.html
+++ b/Tarea1-3/tarea1_3-main.html
@@ -2,16 +2,17 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Tarea 1.3 - Dashboard</title>
+        <title>Tarea 1.3 - Dashboard (Grid)</title>
         <style>
             body {
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             }
 
+            /* clase contenedora */
             .dashboard {
                 display: grid;
                 grid-template-columns: .8fr repeat(4, 1fr); /* repeat crea n numeros de (x)fr */
-                grid-template-rows: auto 1fr 1fr auto; /* grid de 5x5 con rows de tamaño automatico para el header y footer*/
+                grid-template-rows: auto 1fr 1fr auto; /* grid de 5x4 con dos rows de tamaño automatico para el header y footer*/
                 grid-gap: 10px; /* cada elemento */
                 margin: 5%; /* center */
             }
@@ -49,14 +50,13 @@
             .main {
                 grid-column: 2 / span 4;
                 grid-row: 2 / span 2;
-                grid-row-start: 2;
 
                 background-color: #f6f6f6;
                 border-radius: 20px;
 
                 /* sub-grid para contener las tarjetas */
                 display: grid;
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(3, 1fr); /* numero de filas automatico en base al contenido */
                 
 
                 gap: 5px; /* Lo mismo que grid-gap */
@@ -77,7 +77,6 @@
                 box-sizing: border-box;
                 overflow: hidden;
 
-                
                 width: 100%;
                 min-height: 50%;
                 padding-bottom: 10px;
@@ -121,39 +120,39 @@
             </div>
             <div class="main">
                 <div class="card">
-                    <img src="./360.png" alt="img">
+                    <img src="./imagenes/360.png" alt="img">
                     <p>Gato 1</p>
                 </div>
                 <div class="card">
-                    <img src="gob5qsklsned1.jpg" alt="img">
+                    <img src="./imagenes/gob5qsklsned1.jpg" alt="img">
                     <p>Gato 2</p>
                 </div>
                 <div class="card">
-                    <img src="morgana-persona-5.jpg" alt="img">
+                    <img src="./imagenes/morgana-persona-5.jpg" alt="img">
                     <p>Gato 3</p>
                 </div>
                 <div class="card">
-                    <img src="./gob5qsklsned1.jpg" alt="img">
+                    <img src="./imagenes/gob5qsklsned1.jpg" alt="img">
                     <p>Gato 4</p>
                 </div>
                 <div class="card">
-                    <img src="./360.png" alt="img">
+                    <img src="./imagenes/360.png" alt="img">
                     <p>Gato 5</p>
                 </div>
                 <div class="card">
-                    <img src="./gob5qsklsned1.jpg" alt="img">
+                    <img src="./imagenes/gob5qsklsned1.jpg" alt="img">
                     <p>Gato 6</p>
                 </div>
                 <div class="card">
-                    <img src="./morgana-persona-5.jpg" alt="img">
+                    <img src="./imagenes/morgana-persona-5.jpg" alt="img">
                     <p>Gato 7</p>
                 </div>
                 <div class="card">
-                    <img src="./360.png" alt="img">
+                    <img src="./imagenes/360.png" alt="img">
                     <p>Gato 8</p>
                 </div>
                 <div class="card">
-                    <img src="./morgana-persona-5.jpg" alt="img">
+                    <img src="./imagenes/morgana-persona-5.jpg" alt="img">
                     <p>Gato 9</p>
                 </div>
             </div>
