--- a/JavaScript/Tarea2-6/html_form_preview.html
+++ b/JavaScript/Tarea2-6/html_form_preview.html
@@ -85,6 +85,18 @@
   </main>
 </body>
 <script>
-    //let campoNombre = Document.getE
+    function validar() {
+    let inputUser = this.value;
+    if (inputUser.length==0) {
+        console.log("Introduce un input");
+      }
+    else if (inputUser.length<3) {
+        console.log("Nombre inválido, inserte al menos tres caracteres");
+      }
+    else{console.log("Todo OK!")}
+    }
+    let campoNombre = document.getElementById("nombre");
+    campoNombre.addEventListener("input",validar);
+
 </script>
 </html>
